<?xml version="1.0"?>
<package>

	<name>loam</name>
	<version>0.0.0</version>
	<description>Lidar Odometry and Mapping</description>
	<maintainer email="sebastian.kasperski@dfki.de">Sebastian Kasperski</maintainer>
	<license>GPLv3</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>libpcl-all-dev</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>libpcl-all</run_depend>

</package>